  - getr3dDefaults now has two optional arguments to specify
    what to retrieve, e.g. getr3dDefaults("material", "color")
    to retrieve r3dDefaults$material$color, with NULL 
    if either part is missing.
  - A bug in the initial color of a mesh object has been fixed.
  - A bug in translating mouse coordinates (reported on 
    StackOverflow by Richard Morey) when an rgl widget is
    included in a Gitbook has been fixed. 
  - Modified writeASY() for compatibility with Asymptote
    2.65.  (Reported by Pavel Stříž.)
  - Added fogScale parameter to bg3d() and rgl.bg() to
    allow increased or decreased fog.
  - Added fastTransparency parameter to spheres3d() and
    rgl.spheres(), to allow them to be drawn more quickly
    when transparency is used.
  - "mesh3d"" methods for shade3d, wire3d, and dots3d
    have been rewritten to share code, allowing meshes
    to have different front and back material properties.
  - New functions cur3d(), set3d(), close3d() and ids3d() have been 
    added.  Generally, users should use these rather than
    rgl.cur(), rgl.set(), rgl.close() and rgl.ids().
  - pop3d() has been modified slightly so that it no
    longer opens a new window if none is already present
  - snapshot3d() now has optional width and height parameters for the saved snapshot.
  - the cursor now reflects the mouse mode in rglwidget()
    displays.
  - added setGraphicsDelay() function to work around bug
    in MacOS Catalina XQuartz.
  - Made various improvements to reduce notes and warnings
    during install, including suppressing deprecated OpenGL
    warnings on MacOS.
  - Texture coordinates in mesh objects now act the same
    as colors with respect to the meshColors variable.
  - Some declarations in WebGL made assumptions that were
    not valid on mobile devices.
  - Touch events are now supported in WebGL.
  - Added "snapshot" knitr option to use when autoprinting.
  - Added defaults to snapshot3d(width = NULL, height = NULL).