@@ -4,7 +4,7 @@ export(.check3d,
         ageSetter, asEuclidean, asHomogeneous, aspect3d, axes3d, axis3d, box3d,
         bbox3d, bg3d, bgplot3d, 
 	clear3d, clearSubsceneList, clipplanes3d, clipplaneSlider, 
-	      clipMesh3d, close3d,
+	      clipMesh3d, clipObj3d, close3d,
 	      cube3d, cuboctahedron3d, cur3d, 
         currentSubscene3d, cylinder3d,
         decorate3d, deform.mesh3d, delFromSubscene3d, divide.mesh3d, dodecahedron3d, dot3d, ellipse3d, extrude3d,
@@ -72,6 +72,7 @@ export(.check3d,
  S3method(as.mesh3d, triSht)
  S3method(as.mesh3d, ashape3d)
  S3method(as.mesh3d, rglId)
+ S3method(as.mesh3d, rglobject)
  S3method(as.mesh3d, default)
  
  S3method(as.triangles3d, mesh3d)
