@@ -1,5 +1,6 @@
 clipMesh3d <- function(mesh, fn, bound = 0, greater = TRUE,
-                            attribute = "vertices") {
+                       attribute = "vertices",
+                       minVertices = 0) {
   stopifnot(inherits(mesh, "mesh3d"))
   # First, convert quads to triangles
   if (!is.null(mesh$ib)) {
@@ -9,7 +10,12 @@ clipMesh3d <- function(mesh, fn, bound = 0, greater = TRUE,
                               rep(c(1, 2, 3, 1, 3, 4), nquads)], nrow = 3))
     mesh$ib <- NULL
   }
-
+  nverts <- ncol(mesh$vb)
+  oldnverts <- nverts - 1
+  while (nverts < minVertices && oldnverts < nverts) {
+    mesh <- subdivision3d(mesh, deform = FALSE, normalize = TRUE)
+    nverts <- ncol(mesh$vb)
+  }
   attribute <- match.arg(attribute, c("vertices", "normals", "texcoords", "index"), several.ok = TRUE)
   if (is.numeric(fn))
     values <- fn
@@ -60,7 +66,7 @@ clipMesh3d <- function(mesh, fn, bound = 0, greater = TRUE,
       if (!is.null(mesh$material)) {
         if (!is.null(mesh$material$color) && length(mesh$material$color) == ncol(mesh$vb)) {
           rgb <- col2rgb(mesh$material$color)
-          newrgb <- (1 - alphas)*rgb[, good[new]] + alphas*rgb[, bad[new]]
+          newrgb <- (1 - alphas)*rgb[, good[new],drop = FALSE] + alphas*rgb[, bad[new], drop = FALSE]
           mesh$material$color <<- c(mesh$material$color, 
                                    rgb(newrgb["red",], newrgb["green",], newrgb["blue",], maxColorValue = 255))
         }
@@ -110,3 +116,297 @@ clipMesh3d <- function(mesh, fn, bound = 0, greater = TRUE,
   mesh
 }
 
+cleanMesh3d <- function(mesh, onlyFinite = TRUE, allUsed = TRUE) {
+  nold <- ncol(mesh$vb)
+  keep <- TRUE
+  if (onlyFinite)
+    keep <- keep & apply(mesh$vb, 2, function(col) all(is.finite(col)))
+  if (allUsed)
+    keep <- keep & (seq_len(nold) %in% c(mesh$it, mesh$ib))
+  if (!all(keep)) {
+    oldnums <- which(keep)
+    newnums <- rep(NA, nold)
+    nnew <- sum(keep)
+    newnums[oldnums] <- seq_len(nnew)
+    mesh$vb <- mesh$vb[,oldnums]
+    if (!is.null(mesh$it)) {
+      newcols <- newnums[mesh$it]
+      dim(newcols) <- dim(mesh$it)
+      keep <- apply(newcols, 2, function(col) all(!is.na(col)))
+      mesh$it <- newcols[,keep]
+    }
+    if (!is.null(mesh$ib)) {
+      newcols <- newnums[mesh$ib]
+      dim(newcols) <- dim(mesh$ib)
+      keep <- apply(newcols, 2, function(col) all(!is.na(col)))
+      mesh$ib <- newcols[,keep]
+    }
+    if (!is.null(mesh$normals)) 
+      mesh$normals <- mesh$normals[, oldnums]
+    if (!is.null(mesh$texcoords)) 
+      mesh$texcoords <- mesh$texcoords[, oldnums]
+    if (!is.null(mesh$meshColor) && mesh$meshColor == "vertices" 
+        && !is.null(mesh$material) 
+        && length(mesh$material$color) == nold)
+      mesh$material$color <- mesh$material$color[oldnums]
+  }
+  mesh
+}
+
+subdivideLines <- function(x) {
+  nverts <- nrow(x$vertices)
+  newverts <- nverts
+  indices <- rbind(seq_len(nverts), NA, NA)
+  finite <- apply(x$vertices, 1, function(row) all(is.finite(row)))
+  if (x$type == "lines") {
+    for (j in 2*seq_len(nverts %/% 2)) {
+      i <- j - 1
+      if (finite[i] && finite[j]) {
+        for (attr in c("vertices", "normals", "colors")) {
+          if (!is.null(x[[attr]]) && nrow(x[[attr]]) > 1) {
+            new <- (x[[attr]][i,] + x[[attr]][j,])/2
+            while (nrow(x[[attr]]) < newverts + 2) 
+              x[[attr]] <- rbind(x[[attr]], x[[attr]])
+            x[[attr]][newverts + 1,] <- new
+            x[[attr]][newverts + 2,] <- new
+          }
+        }
+        indices[2, i] <- newverts + 1
+        indices[3, i] <- newverts <- newverts + 2
+      }
+    }
+  } else if (x$type == "linestrip") {
+    for (j in seq_len(nverts)[-1]) {
+      i <- j - 1
+      if (finite[i] && finite[j]) {
+        for (attr in c("vertices", "normals", "colors")) {
+          if (!is.null(x[[attr]]) && nrow(x[[attr]]) > 1) {
+            new <- (x[[attr]][i,] + x[[attr]][j,])/2
+            while (nrow(x[[attr]]) < newverts + 1) 
+              x[[attr]] <- rbind(x[[attr]], x[[attr]])
+            x[[attr]][newverts + 1,] <- new
+          }
+        }
+        indices[2, i] <- newverts <- newverts + 1
+      }
+    }
+  }
+  if (nverts < newverts) {
+    indices <- c(indices)
+    indices <- indices[!is.na(indices)]
+    for (attr in c("vertices", "normals", "colors")) 
+      if (!is.null(x[[attr]]) && nrow(x[[attr]]) > 1) 
+        x[[attr]] <- x[[attr]][indices,,drop = FALSE]
+  }
+  x
+}
+
+clipObj3d <- function(ids, fn, bound = 0, greater = TRUE,
+                      attribute = "vertices", 
+                      minVertices = 0,
+                      subscenes = currentSubscene3d()) {
+  getValues <- function(obj) {
+    nverts <- nrow(obj$vertices)
+    args <- matrix(numeric(), ncol = 0, nrow = nverts)
+    for (attr in attribute) {
+      if (attr == "index")
+        args <- cbind(args, seq_len(nverts))
+      else if (is.null(obj[[attr]]))
+        stop(dQuote(attr), " not present in object ", obj$id)
+      else
+        args <- cbind(args, obj[[attr]])
+    }
+    values <- rep(NA, nrow(args))
+    finite <- apply(args, 1, function(row) all(is.finite(row)))
+    values[finite] <- fn(args[finite,,drop = FALSE]) - bound
+    if (!greater) values <- -values
+    values
+  }
+  getKeep <- function(values) {
+    !is.na(values) & values > 0
+  }
+  applyKeep <- function() {
+    for (attr in c("vertices", "normals", "colors",
+                 "texcoords", "centers", "adj"))
+      if (!is.null(obj[[attr]]) &&
+          nrow(obj[[attr]]) == nverts)
+        obj[[attr]] <- obj[[attr]][keep,,drop = FALSE]
+    for (attr in c("texts", "cex", "adj", 
+                   "radii", "ids", "types", 
+                   "flags", "offsets", "pos"))
+      if (length(obj[[attr]]) == nverts)
+        obj[[attr]] <- obj[[attr]][keep] 
+    obj
+  }
+  scene <- scene3d()
+  if (missing(ids))
+    ids <- names(scene$objects)
+  names <- names(ids)
+  ids <- as.character(ids)
+  attribute <- match.arg(attribute, c("vertices", "normals", "texcoords", "index"), several.ok = TRUE)
+  current <- currentSubscene3d()
+  on.exit(useSubscene3d(current))
+  result <- integer()
+  minVertices <- rep(minVertices, length.out = length(ids))
+  names(minVertices) <- ids
+  for (id in ids) {
+    obj <- scene$objects[[id]]
+    type <- obj$type
+    nverts <- nrow(obj$vertices)
+    newid <- NA
+    switch(type,
+           triangles=,
+           quads=,
+           planes=,
+           surface= {
+             mesh <- as.mesh3d(obj)
+             mesh <- cleanMesh3d(mesh)
+             clipped <- clipMesh3d(mesh, fn, bound, greater, attribute,
+                                   minVertices[id])
+             useSubscene3d(subscenes[1])
+             newid <- shade3d(clipped, override = FALSE)
+                              # front = clipped$material$front, 
+                              # back = clipped$material$back)
+      
+             for (i in seq_along(subscenes)[-1])
+               addToSubscene3d(newid, subscenes[i])
+             for (i in seq_along(subscenes))
+               delFromSubscene3d(as.numeric(id), subscenes[i])
+           }, 
+           points =,
+           text =,
+           spheres =,
+           sprites = {
+             keep <- getKeep(getValues(obj))
+             if (!all(keep)) {
+               obj <- applyKeep()
+               newid <- plot3d(obj)
+             }
+           },
+           lines = {
+             oldnverts <- nverts - 1
+             while (nverts < minVertices[id] && nverts > oldnverts) {
+               oldnverts <- nverts
+               obj <- subdivideLines(obj)
+               nverts <- nrow(obj$vertices)
+             }
+             values <- getValues(obj)
+             keep <- getKeep(values)
+             if (!all(keep)) {
+             for (j in 2*seq_len(nverts %/% 2)) {
+               i <- j - 1
+               if (is.na(values[i]) || is.na(values[j])) {
+                 keep[i] <- keep[j] <- FALSE
+               } else if (!keep[i] && !keep[j]) {# no change
+               } else if (!keep[i]) {
+                 p <- 1 - abs(values[i])/(abs(values[i]) + values[j])
+                 obj$vertices[i,] <- p*obj$vertices[i,] + (1-p)*obj$vertices[j,]
+                 keep[i] <- TRUE
+               } else if (!keep[j]) {
+                 p <- 1 - abs(values[j])/(abs(values[j]) + values[i])
+                 obj$vertices[j,] <- p*obj$vertices[j,] + (1-p)*obj$vertices[i,]
+                 keep[j] <- TRUE
+               }
+             }
+             obj <- applyKeep()
+             newid <- plot3d(obj)
+             }
+           },
+           linestrip = {
+             oldnverts <- nverts - 1
+             while (nverts < minVertices[id] && nverts > oldnverts) {
+               oldnverts <- nverts
+               obj <- subdivideLines(obj)
+               nverts <- nrow(obj$vertices)
+             }
+             newverts <- nverts
+             values <- getValues(obj)
+             if (!all(values >= 0, na.rm = TRUE)) {
+             indices <- rbind(seq_len(nverts), NA, NA)
+             for (j in seq_len(nverts)[-1]) {
+               i <- j - 1
+               # There are lots of cases to consider here.
+               # We could have a point that was already ignored
+               # to create a gap in the linestrip, a point
+               # that should be deleted because it is outside the
+               # range, or a point that should be kept.  These
+               # have value NA, negative, or non-negative respectively.
+               # The 9 cases are handled as follows (assuming we
+               # go through (i, j=i+1) pairs in sequence):
+               # i  j  disposition
+               # NA NA drop i, keep j
+               # NA  - drop i, keep j
+               # NA  + keep both
+               # -  NA drop i, keep j
+               # -   - drop i, keep j unless it is last
+               # -   + change i to NA (unless it's first, then drop it), insert interpolant, keep j
+               # +  NA keep both
+               # +   - keep i, insert interpolant then NA, move to j
+               # +   + keep both
+               if (is.na(values[i])) {
+                 if (is.na(values[j]) || values[j] < 0) 
+                   indices[1,i] <- NA
+               } else if (values[i] < 0) {
+                 if (is.na(values[j]) || values[j] < 0)
+                   indices[1,i] <- FALSE
+                 else {
+                   indices[2,i] <- newverts + 1
+                   p <- 1 - abs(values[i])/(abs(values[i]) + values[j])
+                   for (attr in c("vertices", "normals", "colors"))
+                     if (!is.null(obj[[attr]]) &&
+                         nrow(obj[[attr]]) > 1) {
+                       while (nrow(obj[[attr]]) < newverts + 1)
+                         obj[[attr]] <- rbind(obj[[attr]], obj[[attr]])
+                       new <- p*obj[[attr]][i,] + (1-p)*obj[[attr]][j,]
+                       obj[[attr]][newverts + 1,] <- new
+                     }
+                   newverts <- newverts + 1
+                   obj$vertices[i,] <- NA
+                   if (j == 2)
+                     indices[1,i] <- NA
+                 }
+               } else {
+                 if (values[j] < 0) {
+                   indices[2,i] <- newverts + 1
+                   indices[3,i] <- newverts + 2
+                   p <- 1 - abs(values[j])/(abs(values[j]) + values[i])
+                   obj$vertices <- rbind(obj$vertices, 
+                                         p*obj$vertices[j,] + (1-p)*obj$vertices[i,],
+                                         c(NA, NA, NA))
+                   for (attr in c("vertices", "normals", "colors"))
+                     if (!is.null(obj[[attr]]) &&
+                         nrow(obj[[attr]]) > 1) {
+                       while (nrow(obj[[attr]]) < newverts + 2)
+                         obj[[attr]] <- rbind(obj[[attr]], obj[[attr]])
+                       new <- p*obj[[attr]][j,] + (1-p)*obj[[attr]][i,]
+                       obj[[attr]][newverts+1,] <- new
+                       obj[[attr]][newverts+2,] <- NA
+                     }
+                   newverts <- newverts + 2
+                   if (j == nverts)
+                     indices[1,j] <- NA                   
+                 }
+               }
+             }
+             indices <- c(indices)
+             indices <- indices[!is.na(indices)]
+             for (attr in c("vertices", "normals", "colors")) 
+               if (!is.null(obj[[attr]]) && nrow(obj[[attr]]) > 1) 
+                  obj[[attr]] <- obj[[attr]][indices,,drop = FALSE]
+             }
+             newid <- plot3d(obj)
+           }
+           )
+    if (!is.na(newid)) {
+      result[id] <- newid
+      for (i in seq_along(subscenes)[-1])
+        addToSubscene3d(newid, subscenes[i])
+      for (i in seq_along(subscenes))
+        delFromSubscene3d(as.numeric(id), subscenes[i])
+    } else
+      result[id] <- as.integer(id)
+  }
+  if (!is.null(names))
+    names(result) <- names
+  rglId(result)
+}
